--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,21 +1,28 @@
-
-:root.theme_dark {
-  --title-color: #db00ff;
-  --background-color: #000028;
-  --navigagtion-text-color: #ff0070;
-  --nav-outline: rgba(255, 0, 112, 0.4);
-  --accent-color: #ff0070;
-  --accent-text-color: #000028;
-  --subtitle-color: #ff0070;
-  --main-text-color: #f1b2ce;
-  --decoration-color: #ff0070;
-  --page-image: url("../images/cover-image-dark.png");
-}
-
 @media (prefers-color-scheme: dark) {
+  :root {
+      --title-color: #db00ff;
+      --background-color: #000028;
+      --navigagtion-text-color: #ff0070;
+      --nav-outline: rgba(255, 0, 112, 0.4);
+      --accent-color: #ff0070;
+      --accent-text-color: #000028;
+      --subtitle-color: #ff0070;
+      --main-text-color: #f1b2ce;
+      --hyperlink-outline: #f1b2ce;
+      --decoration-color: #ff0070;
+      --page-image: url("../images/cover-image-dark.png");
+  }
 
+  .icon-text {
+      display: inline-block;
+  }
+}
 
-  :root.theme_auto  {
+.page.theme_dark .icon-text {
+  display: inline-block;
+}
+
+.page.theme_dark {
   --title-color: #db00ff;
   --background-color: #000028;
   --navigagtion-text-color: #ff0070;
@@ -24,23 +31,6 @@
   --accent-text-color: #000028;
   --subtitle-color: #ff0070;
   --main-text-color: #f1b2ce;
-  --hyperlink-outline: #f1b2ce;
   --decoration-color: #ff0070;
   --page-image: url("../images/cover-image-dark.png");
-}
-
-
-
-:root.theme_auto {
-  display: inline-block;
-}
-}
-
-.page.theme_dark .icon-text
-:root.theme_dark .icon-text {
-  display: inline-block;
-}
-
-.page.theme_dark .header__theme-menu {
-  grid-row-start: 1;
 }
