--- a/styles/light.css
+++ b/styles/light.css
@@ -1,24 +1,5 @@
-
-:root.theme_light,
-.page.theme_light {
-  --title-color: #ffc2e6;
-  --background-color: #fff1f7;
-  --navigagtion-text-color: #353430;
-  --nav-outline: rgba(53, 52, 48, 0.4);
-  --accent-color: #ff8dcb;
-  --accent-text-color: #353430;
-  --subtitle-color: #353430;
-  --main-text-color: #353430;
-  --page-image: url("../images/cover-image-light.png");
-  --hyperlink-outline: #353430;
-  --decoration-color: #353430;
-}
-
-
 @media (prefers-color-scheme: light) {
-
-  .page.theme_auto,
-  :root.theme_auto {
+  :root {
       --title-color: #ffc2e6;
       --background-color: #fff1f7;
       --navigagtion-text-color: #353430;
@@ -31,19 +12,26 @@
       --decoration-color: #353430;
       --page-image: url("../images/cover-image-light.png");
   }
-  
-  .page.theme_auto,
-  :root.theme_auto  {
-       display: none;
-  }
 
+  .icon-text {
+      display: none;
+  }
 }
 
-.page.theme_light .icon-text,
-:root.theme_light .icon-text {
+.page.theme_light .icon-text {
   display: none;
 }
 
-.page.theme_dark .header__theme-menu {
-  grid-row-start: 1;
+.page.theme_light {
+  --title-color: #ffc2e6;
+  --background-color: #fff1f7;
+  --navigagtion-text-color: #353430;
+  --nav-outline: rgba(53, 52, 48, 0.4);
+  --accent-color: #ff8dcb;
+  --accent-text-color: #353430;
+  --subtitle-color: #353430;
+  --main-text-color: #353430;
+  --page-image: url("../images/cover-image-light.png");
+  --hyperlink-outline: #353430;
+  --decoration-color: #353430;
 }
