--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-=======
-
->>>>>>> fc4610e728a72b8b568c8fc738554062d77decb2
 :root {
     color-scheme: light dark ;
     --title-color: #ffc2e6;
@@ -20,6 +16,7 @@
 body,
 html {
     display: flex;
+    height: auto;
     justify-content: center;
     align-items: center;
 }
@@ -36,8 +33,8 @@ html {
     background-image: var(--page-image);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: top;
-    background-attachment: fixed;
+    background-position: сутеук;
+   background-attachment: fixed;
     width: 100%;
 }
 
@@ -73,7 +70,6 @@ button {
     min-height: 668px;
     padding: 0;
     padding-block-start: 10px;
-    background-position: center;
 }
 
 @media (min-width: 768px) {
