--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,7 @@ html {
     background-image: var(--page-image);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: сутеук;
+    background-position: center;
    background-attachment: fixed;
     width: 100%;
 }
