--- a/styles/style.css
+++ b/styles/style.css
@@ -32,8 +32,7 @@ html {
     background-color: var(--background-color);
     background-image: var(--page-image);
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-position: top;
    background-attachment: fixed;
     width: 100%;
 }
